--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.jpg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Top Shoe DZ</title>
+    <title>Trendy Style</title>
 
     <!-- META TAGS -->
     <meta
@@ -12,21 +12,21 @@
       content="Votre boutique en ligne de chaussures - Découvrez les meilleures offres sur nos produits."
     />
 
-    <meta property="og:title" content="Top Shoe DZ - Votre Boutique En Ligne" />
+    <meta property="og:title" content="Trendy Style - Votre Boutique En Ligne" />
     <meta
       property="og:description"
       content="Découvrez les meilleures offres sur une large gamme de produits dans notre boutique."
     />
     <meta
       property="og:image"
-      content="https://res.cloudinary.com/duh30yscb/image/upload/v1706972627/Top%20Shoe%20DZ/w8zap4glsiegcrdxk0qq.jpg"
+      content="/logo.png"
     />
-    <meta property="og:url" content="https://topshoes-dz.pages.dev" />
+    <meta property="og:url" content="https://trendy-style.pages.dev" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Top Shoe DZ - Votre Boutique En Ligne"
+      content="Trendy Style - Votre Boutique En Ligne"
     />
     <meta
       name="twitter:description"
@@ -34,7 +34,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://res.cloudinary.com/duh30yscb/image/upload/v1706972627/Top%20Shoe%20DZ/w8zap4glsiegcrdxk0qq.jpg"
+      content="/logo.png"
     />
 
     <meta
